--- a/index.html
+++ b/index.html
@@ -21,7 +21,62 @@
     </section>
     <!-- End Hero Section -->
     <!-- Service Section -->
-    
+    <section id="services">
+      <div class="service container">
+        <div class="service-top">
+          <h2 class="service__title">Serv<span>i</span>ces</h2>
+          <p class="service__paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
+            asperiores, quibusdam iure nobis officia vel soluta non corporis
+            eaque ea aut necessitatibus eveniet tempore quae. Tempora nemo
+            excepturi incidunt cumque?
+          </p>
+        </div>
+        <div class="service-bottom">
+          <div class="card-item">
+            <div class="card__icon">
+              <img class="card__img" src="./assets/ico_services.png" alt="icono home" />
+            </div>
+            <h3 class="card__title">Web Design</h3>
+            <p class="card__paragraph">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque
+              asperiores doloribus voluptatum, iste error magnam laboriosam.
+            </p>
+          </div>
+          <div class="card-item">
+            <div class="card__icon">
+              <img class="card__img" src="./assets/ico_services.png" alt="icono home" />
+            </div>
+            <h3 class="card__title">Web Design</h3>
+            <p class="card__paragraph">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque
+              asperiores doloribus voluptatum, iste error magnam laboriosam.
+            </p>
+          </div>
+          <div class="card-item">
+            <div class="card__icon">
+              <img class="card__img" src="./assets/ico_services.png" alt="icono home" />
+            </div>
+            <h3 class="card__title">Web Design</h3>
+            <p class="card__paragraph">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque
+              asperiores doloribus voluptatum, iste error magnam laboriosam.
+            </p>
+          </div>
+          <div class="card-item">
+            <div class="card__icon">
+              <img class="card__img" src="./assets/ico_services.png" alt="icono home" />
+            </div>
+            <h3 class="card__title">Web Design</h3>
+            <p class="card__paragraph">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque
+              asperiores doloribus voluptatum, iste error magnam laboriosam.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- End Service Section -->
   </body>
 </html>
