portfolio personal ok

--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- Header Section -->
+    <section id="header">
+      <div class="header container">
+        <div class="nav-bar">
+          <div class="brand">
+            <a href="#hero">
+              <h2 class="brand__title">
+                <span>P</span>edro <span>M</span>olina
+              </h2>
+            </a>
+          </div>
+          <div class="nav-list">
+            <div class="hamburger">
+              <div class="hamburger__bar"></div>
+            </div>
+            <ul>
+              <li><a href="#hero" data-after="Home">Home</a></li>
+              <li><a href="#services" data-after="Services">Services</a></li>
+              <li><a href="#projects" data-after="Projects">Projects</a></li>
+              <li><a href="#about" data-after="About">About</a></li>
+              <li><a href="#contact" data-after="Contact">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Header Section -->
+
     <!-- Hero Section -->
     <section id="hero">
       <div class="hero container">
@@ -15,16 +43,17 @@
           <h2 class="hero__title">Hello, <span></span></h2>
           <h2 class="hero__title">My Name Is <span></span></h2>
           <h2 class="hero__title">Pedro <span></span></h2>
-          <a class="cta" type="button" href="#">PORTFOLIO</a>
+          <a class="cta" type="button" href="#projects">PORTFOLIO</a>
         </div>
       </div>
     </section>
     <!-- End Hero Section -->
+
     <!-- Service Section -->
     <section id="services">
       <div class="service container">
         <div class="service-top">
-          <h2 class="service__title">Serv<span>i</span>ces</h2>
+          <h2 class="title">Serv<span>i</span>ces</h2>
           <p class="service__paragraph">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
             asperiores, quibusdam iure nobis officia vel soluta non corporis
@@ -35,7 +64,11 @@
         <div class="service-bottom">
           <div class="card-item">
             <div class="card__icon">
-              <img class="card__img" src="./assets/ico_services.png" alt="icono home" />
+              <img
+                class="card__img"
+                src="./assets/ico_services.png"
+                alt="icono home"
+              />
             </div>
             <h3 class="card__title">Web Design</h3>
             <p class="card__paragraph">
@@ -45,7 +78,11 @@
           </div>
           <div class="card-item">
             <div class="card__icon">
-              <img class="card__img" src="./assets/ico_services.png" alt="icono home" />
+              <img
+                class="card__img"
+                src="./assets/ico_services.png"
+                alt="icono home"
+              />
             </div>
             <h3 class="card__title">Web Design</h3>
             <p class="card__paragraph">
@@ -55,7 +92,11 @@
           </div>
           <div class="card-item">
             <div class="card__icon">
-              <img class="card__img" src="./assets/ico_services.png" alt="icono home" />
+              <img
+                class="card__img"
+                src="./assets/ico_services.png"
+                alt="icono home"
+              />
             </div>
             <h3 class="card__title">Web Design</h3>
             <p class="card__paragraph">
@@ -65,7 +106,11 @@
           </div>
           <div class="card-item">
             <div class="card__icon">
-              <img class="card__img" src="./assets/ico_services.png" alt="icono home" />
+              <img
+                class="card__img"
+                src="./assets/ico_services.png"
+                alt="icono home"
+              />
             </div>
             <h3 class="card__title">Web Design</h3>
             <p class="card__paragraph">
@@ -76,7 +121,213 @@
         </div>
       </div>
     </section>
-
     <!-- End Service Section -->
+
+    <!-- Projects section -->
+    <section id="projects">
+      <div class="projects container">
+        <div class="projects__header">
+          <h2 class="title">Recent <span>Projects</span></h2>
+        </div>
+        <div class="all-projects">
+          <div class="project__item">
+            <div class="project__info">
+              <h2 class="info__title">Project 1</h2>
+              <h3 class="info__subtitle">Coding is love</h3>
+              <p class="info__paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                atque eius blanditiis maiores autem, eaque velit, a ratione ea
+                voluptas totam aliquam cupiditate labore doloremque! Odit
+                blanditiis natus minima magnam!
+              </p>
+            </div>
+            <div class="project__figure">
+              <img
+                class="project__img"
+                src="./assets/img-01.jpg"
+                alt="imagen 01"
+              />
+            </div>
+          </div>
+          <div class="project__item">
+            <div class="project__info">
+              <h2 class="info__title">Project 2</h2>
+              <h3 class="info__subtitle">Coding is love</h3>
+              <p class="info__paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                atque eius blanditiis maiores autem, eaque velit, a ratione ea
+                voluptas totam aliquam cupiditate labore doloremque! Odit
+                blanditiis natus minima magnam!
+              </p>
+            </div>
+            <div class="project__figure">
+              <img
+                class="project__img"
+                src="./assets/img-01.jpg"
+                alt="imagen 01"
+              />
+            </div>
+          </div>
+          <div class="project__item">
+            <div class="project__info">
+              <h2 class="info__title">Project 3</h2>
+              <h3 class="info__subtitle">Coding is love</h3>
+              <p class="info__paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                atque eius blanditiis maiores autem, eaque velit, a ratione ea
+                voluptas totam aliquam cupiditate labore doloremque! Odit
+                blanditiis natus minima magnam!
+              </p>
+            </div>
+            <div class="project__figure">
+              <img
+                class="project__img"
+                src="./assets/img-01.jpg"
+                alt="imagen 01"
+              />
+            </div>
+          </div>
+          <div class="project__item">
+            <div class="project__info">
+              <h2 class="info__title">Project 4</h2>
+              <h3 class="info__subtitle">Coding is love</h3>
+              <p class="info__paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                atque eius blanditiis maiores autem, eaque velit, a ratione ea
+                voluptas totam aliquam cupiditate labore doloremque! Odit
+                blanditiis natus minima magnam!
+              </p>
+            </div>
+            <div class="project__figure">
+              <img
+                class="project__img"
+                src="./assets/img-01.jpg"
+                alt="imagen 01"
+              />
+            </div>
+          </div>
+          <div class="project__item">
+            <div class="project__info">
+              <h2 class="info__title">Project 5</h2>
+              <h3 class="info__subtitle">Coding is love</h3>
+              <p class="info__paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                atque eius blanditiis maiores autem, eaque velit, a ratione ea
+                voluptas totam aliquam cupiditate labore doloremque! Odit
+                blanditiis natus minima magnam!
+              </p>
+            </div>
+            <div class="project__figure">
+              <img
+                class="project__img"
+                src="./assets/img-01.jpg"
+                alt="imagen 01"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Projects section -->
+
+    <!-- About Section -->
+    <section id="about">
+      <div class="about container">
+        <div class="about__left">
+          <div class="about__figure">
+            <img class="about__img" src="./assets/img-02.jpg" alt="Mi foto" />
+          </div>
+        </div>
+        <div class="about__right">
+          <h2 class="title">About <span>Me</span></h2>
+          <h3 class="about__subtitle">Frontend Web Developer</h3>
+          <p class="about__paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quae
+            repellat deserunt exercitationem non, aspernatur neque accusamus ad
+            est! Libero alias facilis quaerat dolorum sequi voluptates, ab
+            deleniti? Totam, dignissimos?
+          </p>
+          <a type="button" href="#" class="cta">Download Resume</a>
+        </div>
+      </div>
+    </section>
+    <!-- End About Section -->
+
+    <!-- Contact Section -->
+    <section id="contact">
+      <div class="contact container">
+        <div>
+          <div class="title">Contact <span>Info</span></div>
+        </div>
+        <div class="contact__items">
+          <div class="contact__item">
+            <div class="contact__figure">
+              <img src="./assets/ico_fono.png" alt="" class="contact__img" />
+            </div>
+            <div class="contact__info">
+              <h2 class="contact__title">Phone</h2>
+              <h3 class="contact__subtitle">+1 234 123 1234</h3>
+              <h3 class="contact__subtitle">+1 234 123 1234</h3>
+            </div>
+          </div>
+          <div class="contact__item">
+            <div class="contact__figure">
+              <img src="./assets/ico_email.png" alt="" class="contact__img" />
+            </div>
+            <div class="contact__info">
+              <h2 class="contact__title">Email</h2>
+              <h3 class="contact__subtitle">pedro.acms@gmail.com</h3>
+              <h3 class="contact__subtitle">pedro.molsu@gmail.com</h3>
+            </div>
+          </div>
+          <div class="contact__item">
+            <div class="contact__figure">
+              <img src="./assets/ico_address.png" alt="" class="contact__img" />
+            </div>
+            <div class="contact__info">
+              <h2 class="contact__title">Address</h2>
+              <h3 class="contact__subtitle">Jr. Hernan Cortez 1091</h3>
+              <h3 class="contact__subtitle">El Agustino</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Contact Section -->
+
+    <!-- Footer Section -->
+    <footer id="footer">
+      <div class="footer container">
+        <div class="brand__title"><span>P</span>edro <span>M</span>olina</div>
+        <h2 class="footer__description">Your Complete Web Solution</h2>
+        <div class="footer__figures">
+          <div class="footer__figure">
+            <a href="#">
+              <img src="./assets/ico_facebook.png" alt="" class="footer__img" />
+            </a>
+          </div>
+          <div class="footer__figure">
+            <a href="#">
+              <img
+                src="./assets/ico_instagram.png"
+                alt=""
+                class="footer__img"
+              />
+            </a>
+          </div>
+          <div class="footer__figure">
+            <a href="#">
+              <img src="./assets/ico_twitter.png" alt="" class="footer__img" />
+            </a>
+          </div>
+        </div>
+        <div class="footer__copy">
+          Copyright &copy; 2021 Pedro All rights reserved
+        </div>
+      </div>
+    </footer>
+    <!-- End Footer Section -->
+
+    <script src="./app.js"></script>
   </body>
 </html>
